--- a/franske-courses/current/itc-2611/syllabus.html
+++ b/franske-courses/current/itc-2611/syllabus.html
@@ -641,10 +641,7 @@ If you are struggling with labs it&#8217;s strongly suggested you make arrangeme
 <div class="sect2">
 <h3 id="_grading_method_and_availability"><a class="anchor" href="#_grading_method_and_availability"></a>Grading Method and Availability</h3>
 <div class="paragraph">
-<p>This course is a combination of two Cisco Networking Academy courses, CCNA 1 and CCNA 2. Grades for each of these two courses will be calculated separately following the method below and then the two courses will be averaged for a final grade in the single 6 credit college course.</p>
-</div>
-<div class="paragraph">
-<p>Grades for each course is calculated based on a weighted points system. Each assignment, quiz or test is assigned to one of the weighted categories below and is graded on a points system. Your percentage is calculated for each category by dividing the points earned in that category by the points available. Finally, your percentage earned in each category is multiplied by the weight of that category and these are added together. The instructor may round up based on student participation and individual improvement.</p>
+<p>Grades for this course are calculated based on a weighted points system. Each assignment, quiz or test is assigned to one of the weighted categories below and is graded on a points system. Your percentage is calculated for each category by dividing the points earned in that category by the points available. Finally, your percentage earned in each category is multiplied by the weight of that category and these are added together. The instructor may round up based on student participation and individual improvement.</p>
 </div>
 <table class="tableblock frame-all grid-all fit-content">
 <colgroup>
@@ -807,7 +804,7 @@ Be aware that the final grade in online gradebooks may be calculated in a way wh
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-17 18:05:20 -0500<br>
+<p>Document Build Time: 2022-08-17 18:14:45 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
