--- a/tech-info/current/voip/cisco-phone-security.html
+++ b/tech-info/current/voip/cisco-phone-security.html
@@ -190,19 +190,47 @@
 . The phone should reset with cleared network settings.</p>
 </div>
 <div class="paragraph">
-<p>Next, try clearing the ITL file:
-* On the 79xx series phones:
-. Press the Settings button and navigate to and enter the Security &gt; Trust List &gt; ITL File submenu.
-. Unlock the configuration if it is not currently unlocked (look at the padlock in the upper right corner) by pressing "* * #" on the phone. The small padlock in the upper right corner of the screen it will switch to an unlocked padlock.
-. Press the Erase softkey (the buttons along the bottom of the screen). If you don&#8217;t see Erase you may need to press More one or more times to get to a screen which has Erase.
-. The phone should reset with an empty ITL file.
-* On the 89xx/99xx series phones:
-. Press the Settings button and navigate to and enter the Administrator Settings &gt; Reset Settings &gt; Security Settings option.
-. The phone should reset with an empty ITL file.</p>
+<p>Next, try clearing the ITL file:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>On the 79xx series phones:</p>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>Press the Settings button and navigate to and enter the Security &gt; Trust List &gt; ITL File submenu.</p>
+</li>
+<li>
+<p>Unlock the configuration if it is not currently unlocked (look at the padlock in the upper right corner) by pressing "* * #" on the phone. The small padlock in the upper right corner of the screen it will switch to an unlocked padlock.</p>
+</li>
+<li>
+<p>Press the Erase softkey (the buttons along the bottom of the screen). If you don&#8217;t see Erase you may need to press More one or more times to get to a screen which has Erase.</p>
+</li>
+<li>
+<p>The phone should reset with an empty ITL file.</p>
+</li>
+</ol>
+</div>
+</li>
+<li>
+<p>On the 89xx/99xx series phones:</p>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>Press the Settings button and navigate to and enter the Administrator Settings &gt; Reset Settings &gt; Security Settings option.</p>
+</li>
+<li>
+<p>The phone should reset with an empty ITL file.</p>
+</li>
+</ol>
+</div>
+</li>
+</ul>
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-17 18:14:45 -0500<br>
+<p>Document Build Time: 2022-08-17 19:42:50 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
