--- a/franske-courses/current/itc-2300/assignments.html
+++ b/franske-courses/current/itc-2300/assignments.html
@@ -317,7 +317,7 @@ In this lab activity you will, amongst other things download and install the Ope
 </div>
 </li>
 <li>
-<p>Complete the Programming Fundamentals Module from the [<a href="https://developer.cisco.com/learning/tracks/devnet-beginner" class="bare">https://developer.cisco.com/learning/tracks/devnet-beginner</a> DevNet Beginner] track</p>
+<p>Complete the Programming Fundamentals Module from the <a href="https://developer.cisco.com/learning/tracks/devnet-beginner">DevNet Beginner</a> track</p>
 <div class="openblock">
 <div class="content">
 <div class="admonitionblock note">
@@ -443,31 +443,129 @@ The SSH instructions in the "Exploring IOS XE YANG Data Models with NETCONF" lab
 <div class="sect1">
 <h2 id="_homework"><a class="anchor" href="#_homework"></a>Homework</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p>Homework activities will require submitting the actual answers to each question in the activity and may require showing your work as well. Homework assignment are individual, you and your lab partner need to both turn them in separately even if you work on them together.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Participate in an online forum discussion (typically 3 quality posts or more) of each module on the Cisco Netacad site. See the <a href="../forum-posting/" class="xref page">forum posting page</a> for details. (up to 10 points each module based on quality)</p>
+</li>
+</ul>
+</div>
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-tip" title="Tip"></i>
+</td>
+<td class="content">
+Discussion forum posts are usually worth a larger portion of your final grade than most students expect! If you have not done discussion posts in one of Dr. Franske&#8217;s classes before, or you want to try and score better on discussion forum postings, be sure to check out the <a href="../forum-posting/" class="xref page">instructions for participating in forum discussions and example posts</a>!
+</td>
+</tr>
+</table>
+</div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_participation_activities"><a class="anchor" href="#_participation_activities"></a>Participation Activities</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p>Any participation activities completed in the course will go here. This falls into the participation category of your course grade.
+* For each topic you need to meet with the instructor at least once to check on your status and understanding of the topic. Each meeting will be worth up to 10 points.
+* You will need to complete peer evaluations of all course projects, these evaluations will be worth 10 participation points total.</p>
 </div>
-</div>
-<div class="sect1">
-<h2 id="_unit_assessments"><a class="anchor" href="#_unit_assessments"></a>Unit Assessments</h2>
-<div class="sectionbody">
-
 </div>
 </div>
 <div class="sect1">
-<h2 id="_other"><a class="anchor" href="#_other"></a>Other</h2>
+<h2 id="_topic_assessments"><a class="anchor" href="#_topic_assessments"></a>Topic Assessments</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p>You are responsible for completing an online assessment for each topic. These fall into the topic assessments category of your course grade.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_final_exam"><a class="anchor" href="#_final_exam"></a>Final Exam</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>You are responsible for completing a final exam, this will go into the regular final exam category of your course grade.</p>
+</div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_course_project"><a class="anchor" href="#_course_project"></a>Course Project</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p>The course project will take the place of the final skills exam in this course and will allow you and your lab partner to continue to experiment with one of the topic areas covered in the course. You will need to present your project in a presentation/demonstration to the class which is expected to last 10 minutes and you will need to write and submit project report.</p>
+</div>
+<div class="paragraph">
+<p>The project should be related to one of the three main units covered in the course. You may either expand on one of the tools that we used in the course or explore a different tool in the same topic area. Your project plan should be approved by the instructor. Remember that the project is 15% of your final grade so it is expected to be a substantial amount of work.</p>
+</div>
+<div class="sect2">
+<h3 id="_presentation_tips"><a class="anchor" href="#_presentation_tips"></a>Presentation Tips</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Presentations should be very close to 10 minutes in length. While there is not a part of your score that is directly tied to timing if they are much longer or shorter you probably have either over-covered or under-covered what you did (or didn&#8217;t do enough work) which will definitely show up in your score.</p>
+</li>
+<li>
+<p>I suggest spending about half the time giving some background on your project (why you chose it, what are the key things you learned, what all did you do). You can have slides for this if you&#8217;d like.</p>
+</li>
+<li>
+<p>If you use slides I normally suggest no more than one slide per minute of presentation time (excluding a title slide) so probably stick to only about 5 slides of content. Also, follow good presentation tips for using slides (don&#8217;t make them overly complicated, don&#8217;t try to put too much information on one slide, don&#8217;t read your slides to us as part of your presentation, etc.) There are lots of good resources online that talk about creating effective presentation slides. Two examples are: <a href="https://edu.gcfglobal.org/en/powerpoint-tips/simple-rules-for-better-powerpoint-presentations/1/" class="bare">https://edu.gcfglobal.org/en/powerpoint-tips/simple-rules-for-better-powerpoint-presentations/1/</a> and <a href="https://www.unl.edu/gradstudies/connections/tips-creative-effective-powerpoint-presentations" class="bare">https://www.unl.edu/gradstudies/connections/tips-creative-effective-powerpoint-presentations</a></p>
+</li>
+<li>
+<p>I suggest spending the other half of the time giving a demonstration about some part of your project. Don&#8217;t try to show off everything you did, cramming 3 weeks of work into 5 minutes is not possible. Pick one specific part of your project that you can demonstrate in 5 minutes and show that. You&#8217;re not trying to give a "how-to" presentation so you don&#8217;t need to show every step. Just give people an idea of what you did in your project. Stage things ahead of time and skip steps as needed to keep on time.</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_lab_report_tips"><a class="anchor" href="#_lab_report_tips"></a>Lab Report Tips</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>The format is the same as a regular lab report (what you did, problems you had, how you tested, and what you learned) but the report must be much longer (about 4 pages single spaced) because it includes 3 weeks of work. It should be clear how you spent the three weeks and that it really was the equivalent amount of work as three weeks of regular classwork.</p>
+</li>
+<li>
+<p>You should thoroughly describe what you did (not exact steps, but an overview of the major things you accomplished), and what new things you learned by doing the project.</p>
+</li>
+<li>
+<p>It should be clear how the project relates to one of the topics from class.</p>
+</li>
+<li>
+<p>This should also be written like a paper explaining your project so don&#8217;t include a bunch of lists, etc. which are just there to fill space as that will not produce a quality report.</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_project_grading"><a class="anchor" href="#_project_grading"></a>Project Grading</h3>
+<div class="paragraph">
+<p>There will be two primary components to your grade for the project, a lab report and a presentation.</p>
+</div>
+<div class="paragraph">
+<p>You will be turning in a lab report using the same format you have used for other lab reports in the class but it will be longer as this is a much more substantial project. Lab reports for this project should be about 4 pages long (single spaced) and include all the regular sections of a lab report (what you did, what problems you had, how you tested, and what you learned. The project lab report will be worth 100 points.</p>
+</div>
+<div class="paragraph">
+<p>In addition you will receive a grade on a 10 minute presentation to the class. The presentation should be interesting, engaging, informative, and factually correct. It is a good idea to show off your actual work as much as possible (not just talk about it) so you are strongly encouraged to find a way to demonstrate something "live" during the presentation.</p>
+</div>
+<div class="paragraph">
+<p>The presentation score is comprised of:
+* Topic Content (30 Points)
+<strong> Was the topic appropriate for the course project? Was the content presented accurate and did it provide a good overview of the topic and the work done? Was the amount of work done appropriate for a large course project?
+* Presentation Skills (30 Points)
+</strong> How well did the group do ''explaining'' the content? Were they able to adequately answer appropriate questions from the class? Was the presentation professional and well prepared?
+* Engagement (20 Points)
+<strong> How well did the group engage the class in their presentation? This could include getting or asking questions of the class, using appropriate visual aids, etc. How well did the group express excitement and interest in the topic of their presentation?
+* Overall Quality (20 Points)
+</strong> Did you learn something or get something clarified in your mind? Did you feel listening to this presentation was worth your time? Was this a "good" presentation? Are you interested to learn more about this topic having heard this presentation? Do you have a good understanding of how you could use this to solve future problems you come across?</p>
+</div>
+<div class="paragraph">
+<p>Finally, a small portion of your grade for the project presentation (10% of the presentation score) will be writing a short review of each of the other project presentations. These are not simply participation points for filling out a review, your review will be graded for quality so be sure you listen carefully and provide useful feedback in your review.</p>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -475,7 +573,7 @@ The SSH instructions in the "Exploring IOS XE YANG Data Models with NETCONF" lab
 <div class="sectionbody">
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-17 19:45:18 -0500<br>
+<p>Document Build Time: 2022-08-17 20:29:23 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
